--- a/src/main/resources/templates/course_detail_view.html
+++ b/src/main/resources/templates/course_detail_view.html
@@ -491,7 +491,7 @@
 											</form>
                                        </li>
                                         <li th:if="${check==true}">
-                                      <a th:href="@{/Chapter/{id}(id=${generalC.id})}" >  <button class="btn_buy" type="submit">Học Ngay</button></a>
+                                      <a th:href="@{/Course/{id}(id=${generalC.id})}" >  <button class="btn_buy" type="submit">Học Ngay</button></a>
                                         </li>
                                     </ul>
                                     <div class="_215fgt1">
