--- a/src/main/resources/static/css/slideshow.css
+++ b/src/main/resources/static/css/slideshow.css
@@ -15,6 +15,9 @@
     text-transform: uppercase;
     transition: color 0.1s linear 0.05s;
 }
+.xemthem:hover{
+    background-color: #FFB71A;
+}
 
 .btn::before {
     content: "";
@@ -37,7 +40,7 @@
 .btn .btn-inner {
     position: relative;
     z-index: 2;
-    color: #373737;
+    color: white;
 }
 
 .btn:hover {
@@ -48,7 +51,6 @@
 .btn:hover::before {
     top: 0;
     height: 100%;
-    opacity: 1;
     transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
     color: #373737;
 }
